adjusting config file for general use

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ process {
         memory = 32.GB
     }
 
-    withName: alignTrimmedReads {
+    withLabel: alignment {
         cpus = 32
         memory = 16.GB
     }
@@ -28,8 +28,6 @@ process {
 
 aws {
     region = 'us-east-1'
-    accessKey = ''
-    secretKey = ''
 
     client {
         maxErrorRetry = 4
