Added an additional docker image for general bash use and python3 scripts; updated image tags to use the correct slim images

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,50 @@ process {
         cpus = 32
         memory = 16.GB
     }
+
+    withLabel: ubuntu_python3 {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/ubuntu_python3-ufl-germline:1.0.0'
+    }
+
+    withLabel: bcftools_tabix {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/bcftools_tabix-ufl-germline:1.0.0'
+    }
+
+    withLabel: bwa {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/bwa-ufl-germline:1.0.0'
+    }
+
+    withLabel: expansion_hunter {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/expansion_hunter-ufl-germline:1.0.0'
+    }
+
+    withLabel: fastqc {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/fastqc-ufl-germline:1.0.0'
+    }
+
+    withLabel: panelcn.mops {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/panelcn.mops-ufl-germline:1.0.0'
+    }
+
+    withLabel: picard {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/picard-ufl-germline:1.0.0'
+    }
+
+    withLabel: samtools {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/samtools-ufl-germline:1.0.0'
+    }
+
+    withLabel: snpeff_tabix {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/snpeff_tabix-ufl-germline:1.0.0'
+    }
+
+    withLabel: strelka2 {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/strelka2-ufl-germline:1.0.0'
+    }
+
+    withLabel: trimmomatic {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/trimmomatic-ufl-germline:1.0.0'
+    }
 }
 
 aws {
