fixed tagging and naming so nextflow recognized things

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ process {
         container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/fastqc-ufl-germline:1.0.0'
     }
 
-    withLabel: panelcn.mops {
+    withLabel: panelcn_mops {
         container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/panelcn.mops-ufl-germline:1.0.0'
     }
 
