added reporting and metadata

--- a/nextflow.config
+++ b/nextflow.config
@@ -85,3 +85,18 @@ aws {
 docker {
     enabled = true
 }
+
+timeline {
+    enabled = true
+}
+
+trace {
+    enabled = true
+    fields = 'process,tag,status,container,cpus,disk,memory,attempt,submit,start,complete,realtime,%cpu,%mem'
+}
+
+manifest {
+    author = 'Johnny Bravo'
+    description = 'germline pipeline and some tertiary analysis'
+    version = '1.0.0'
+}
