updated documentation, makefile for nextflow image, and updated config so each label has it's own computeEnvironment

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,27 +1,30 @@
 process {
     executor = 'awsbatch'
-    queue = 'hakmonkey-highPriority'
     errorStrategy = 'retry'
     maxRetries = 4
 
     withLabel: small_process {
-        cpus = 4
+        cpus = 2
         memory = 4.GB
+        queue = 'hakmonkey-small_process'
     }
 
     withLabel: medium_process {
         cpus = 8
-        memory = 8.GB
+        memory = 16.GB
+        queue = 'hakmonkey-medium_process'
     }
 
     withLabel: high_mem {
         cpus = 4
         memory = 32.GB
+        queue = 'hakmonkey-high_mem'
     }
 
     withLabel: alignment {
         cpus = 32
-        memory = 16.GB
+        memory = 64.GB
+        queue = 'hakmonkey-alignment'
     }
 
     withLabel: ubuntu_python3 {
