updated makefile so that nextflow image is automatically pushed to aws ecr

--- a/Docker/nextflow/Makefile
+++ b/Docker/nextflow/Makefile
@@ -8,7 +8,10 @@ build: dist/docker
 	cp -r ../../ufl-multiqc.nf .
 	cp -r ../../ufl-apply_panels.nf .
 	cp -r ../../nextflow.config .
+	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
 	docker build -t nextflow-ufl-germline:${version} .
+	docker tag nextflow-ufl-germline:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/nextflow-ufl-germline:${version}
+	docker push 178175818611.dkr.ecr.us-east-1.amazonaws.com/nextflow-ufl-germline:${version}
 	rm -rf modules/
 	rm -rf bin/
 	rm -rf dist/
