Attempting to make the nextflow image work with batch... so far it won't run, but will run locally

--- a/Docker/nextflow/Dockerfile
+++ b/Docker/nextflow/Dockerfile
@@ -9,23 +9,24 @@ RUN pip3 install awscli
 ENV NXF_OPTS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap' NXF_HOME=/.nextflow AWS_DEFAULT_REGION=us-east-1
 
 # copy docker client
-COPY main.nf ~/
-COPY ufl-apply_panels.nf ~/
-COPY ufl-germline.nf ~/
-COPY ufl-multiqc.nf ~/
-COPY nextflow.config ~/
-COPY bin/ ~/bin/
-COPY modules/ ~/modules/
+RUN mkdir /data/
+COPY main.nf /data/
+COPY ufl-apply_panels.nf /data/
+COPY ufl-germline.nf /data/
+COPY ufl-multiqc.nf /data/
+COPY nextflow.config /data/
+COPY bin/ /data/bin/
+COPY modules/ /data/modules/
 COPY dist/docker /usr/local/bin/docker
 COPY entry.sh /usr/local/bin/entry.sh
 COPY nextflow /usr/local/bin/nextflow
 
 # download runtime
 RUN mkdir /.nextflow \
- && touch /.nextflow/dockerized \
- && chmod 755 /usr/local/bin/nextflow \
- && chmod 755 /usr/local/bin/entry.sh \
- && nextflow info
+&& touch /.nextflow/dockerized \
+&& chmod 755 /usr/local/bin/entry.sh \
+&& chmod 755 /usr/local/bin/nextflow \
+&& nextflow info
 
 # define the entry point
 ENTRYPOINT ["/usr/local/bin/entry.sh"]
