added multiqc label so that the multiqc modules run (with the correct image), [should have already been here....]

--- a/nextflow.config
+++ b/nextflow.config
@@ -70,6 +70,10 @@ process {
     withLabel: trimmomatic {
         container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/trimmomatic-ufl-germline:1.0.0'
     }
+
+    withLabel: multiqc {
+        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/multiqc-ufl-germline:1.0.0'
+    }
 }
 
 aws {
