updated dockerfile to include bedtools is a powerful toolset for genome arithmetic.
Version:   v2.30.0
About:     developed in the quinlanlab.org and by many contributors worldwide.
Docs:      http://bedtools.readthedocs.io/
Code:      https://github.com/arq5x/bedtools2
Mail:      https://groups.google.com/forum/#!forum/bedtools-discuss

Usage:     bedtools <subcommand> [options]

The bedtools sub-commands include:

[ Genome arithmetic ]
    intersect     Find overlapping intervals in various ways.
    window        Find overlapping intervals within a window around an interval.
    closest       Find the closest, potentially non-overlapping interval.
    coverage      Compute the coverage over defined intervals.
    map           Apply a function to a column for each overlapping interval.
    genomecov     Compute the coverage over an entire genome.
    merge         Combine overlapping/nearby intervals into a single interval.
    cluster       Cluster (but don't merge) overlapping/nearby intervals.
    complement    Extract intervals _not_ represented by an interval file.
    shift         Adjust the position of intervals.
    subtract      Remove intervals based on overlaps b/w two files.
    slop          Adjust the size of intervals.
    flank         Create new intervals from the flanks of existing intervals.
    sort          Order the intervals in a file.
    random        Generate random intervals in a genome.
    shuffle       Randomly redistribute intervals in a genome.
    sample        Sample random records from file using reservoir sampling.
    spacing       Report the gap lengths between intervals in a file.
    annotate      Annotate coverage of features from multiple files.

[ Multi-way file comparisons ]
    multiinter    Identifies common intervals among multiple interval files.
    unionbedg     Combines coverage intervals from multiple BEDGRAPH files.

[ Paired-end manipulation ]
    pairtobed     Find pairs that overlap intervals in various way

--- a/Docker/var_class/Dockerfile
+++ b/Docker/var_class/Dockerfile
@@ -12,14 +12,16 @@ libcurl4-openssl-dev \
 r-base \
 wget \
 libxml2-dev \
-libxmlsec1-dev
+libxmlsec1-dev \
+bedtools
 
 RUN pip3 install \
 awscli \
 boto3 \
 pandas \
 pysam \
-argparse
+argparse \
+openpyxl
 
 RUN R -e "install.packages('RCurl')"
 RUN R -e "install.packages('BiocManager')"
@@ -36,5 +38,6 @@ COPY Resources /Resources/
 COPY PMC-ids.csv.gz /
 COPY CNV_json_plot.R /
 COPY g_ranges.py /
+COPY json_to_csv.py /
 
 RUN gunzip PMC-ids.csv.gz
