--- a/Docker/var_class/Makefile
+++ b/Docker/var_class/Makefile
@@ -8,6 +8,7 @@ make:
 	cp -r ../../Scripts/vcf_report/varClass.py .
 	cp -r ../../Scripts/CNV_json_plot.R .
 	cp -r ../../Scripts/g_ranges.py .
+	cp -r ../../Scripts/json_to_csv.py .
 	cp -r ../../Reference_Data/PMC-ids.csv.gz .
 	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
 	docker build -t var_class-ufl-germline:${version} .
