updated high_mem tag to match new compute env

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ process {
 
     withLabel: high_mem {
         cpus = 4
-        memory = 30.GB
+        memory = 62.GB
         queue = 'hakmonkey-high_mem'
     }
 
@@ -47,7 +47,7 @@ process {
         container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/fastqc-ufl-germline:1.0.0'
     }
 
-    withLabel: panelcn_mops {
+    withLabel: cn_mops {
         container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/panelcn.mops-ufl-germline:1.0.0'
     }
 
