updated reporting and image

--- a/Docker/var_class/Makefile
+++ b/Docker/var_class/Makefile
@@ -10,6 +10,8 @@ make:
 	cp -r ../../Scripts/g_ranges.py .
 	cp -r ../../Scripts/json_to_csv.py .
 	cp -r ../../Reference_Data/PMC-ids.csv.gz .
+	cp -r ../../Reference_Data/clinvar.vcf.gz .
+	cp -r ../../Reference_Data/clinvar.vcf.gz.tbi .
 	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
 	docker build -t var_class-ufl-germline:${version} .
 	docker tag var_class-ufl-germline:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/var_class-ufl-germline:${version}
@@ -18,3 +20,4 @@ make:
 	rm *.py
 	rm *.R
 	rm *.gz
+	rm *.tbi
