updated the var_class docker files to pull and build using the correct files and removed reference data now in aws

--- a/Docker/var_class/Dockerfile
+++ b/Docker/var_class/Dockerfile
@@ -32,17 +32,11 @@ RUN R -e "BiocManager::install('KaryoploteR')"
 RUN R -e "BiocManager::install('CopyNumberPlots')"
 
 RUN mkdir Resources/
-COPY varClass.py /
+COPY reporting.py /
 COPY ClassifyCNV.py /
 COPY parse_clingen_tsv.py /
 COPY resources.py /
 COPY Resources /Resources/
-COPY PMC-ids.csv.gz /
 COPY CNV_json_plot.R /
 COPY g_ranges.py /
 COPY json_to_csv.py /
-COPY clinvar.vcf.gz /
-COPY clinvar.vcf.gz.tbi /
-COPY hg19_regions.bed /
-
-RUN gunzip PMC-ids.csv.gz
