--- a/Docker/var_class/Makefile
+++ b/Docker/var_class/Makefile
@@ -9,10 +9,10 @@ make:
 	cp -r ../../Scripts/CNV_json_plot.R .
 	cp -r ../../Scripts/g_ranges.py .
 	cp -r ../../Scripts/json_to_csv.py .
-	#aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
+	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
 	docker build -t var_class-ufl-germline:${version} .
-	#docker tag var_class-ufl-germline:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/var_class-ufl-germline:${version}
-	#docker push 178175818611.dkr.ecr.us-east-1.amazonaws.com/var_class-ufl-germline:${version}
+	docker tag var_class-ufl-germline:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/var_class-ufl-germline:${version}
+	docker push 178175818611.dkr.ecr.us-east-1.amazonaws.com/var_class-ufl-germline:${version}
 	rm -rf Resources/
 	rm *.py
 	rm *.R
