Updated All Makefiles
Removed the Windows makefiles and removed the redundant `buildx` command. The images are only being build for one platform anyway and `buildx` does not work in Windows WSL.

--- a/DEV/local_nextflow/Makefile
+++ b/DEV/local_nextflow/Makefile
@@ -7,7 +7,7 @@ build: dist/docker
 	cp -r ../../workflows/ ./workflows/
 	cp -r ../../*.nf .
 	cp -r ../../nextflow.config .
-	docker buildx build --platform ${platform} -t local_nextflow:${version} .
+	docker build --platform ${platform} -t local_nextflow:${version} .
 	rm -rf modules/
 	rm -rf bin/
 	rm -rf dist/
