--- a/Docker/cn_mops/Makefile
+++ b/Docker/cn_mops/Makefile
@@ -3,6 +3,6 @@ platform ?= linux/amd64
 
 make:
 	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
-	docker buildx build --platform ${platform} -t cnmops:${version} .
+	docker build --platform ${platform} -t cnmops:${version} .
 	docker tag cnmops:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/panelcn.mops-ufl-germline:${version}
 	docker push 178175818611.dkr.ecr.us-east-1.amazonaws.com/panelcn.mops-ufl-germline:${version}
