--- a/Docker/expansion_hunter/Makefile
+++ b/Docker/expansion_hunter/Makefile
@@ -3,6 +3,6 @@ platform ?= linux/amd64
 
 make:
 	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
-	docker buildx build --platform ${platform} -t expansion_hunter:${version} .
+	docker build --platform ${platform} -t expansion_hunter:${version} .
 	docker tag expansion_hunter:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/expansion_hunter-ufl-germline:${version}
 	docker push 178175818611.dkr.ecr.us-east-1.amazonaws.com/expansion_hunter-ufl-germline:${version}
