--- a/nextflow.config
+++ b/nextflow.config
@@ -1,97 +1,105 @@
-// Need to make sure that the value in the errorStrategy matches maxRetries
-process {
-    executor = 'awsbatch'
-    errorStrategy = { task.attempt <= 2 ? 'retry' : 'finish' }
-    maxRetries = 2
+/*
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    HaKmonkey/nf-wgs-ufl Nextflow config file
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Default config options for all compute environments
+----------------------------------------------------------------------------------------
+*/
 
-    withLabel: small_process {
-        cpus = 2
-        memory = 2.GB
-        queue = 'hakmonkey-small_process'
-    }
+params {
+    // AWS or local
+    aws                  = false
 
-    withLabel: medium_process {
-        cpus = 8
-        memory = 14.GB
-        queue = 'hakmonkey-medium_process'
-    }
+    // Pipeline type
+    germline             = false
+    cat_reads            = false
+    align                = false
+    vcf                  = false
+    multiqc              = false
+    report               = false
+    cnv_controls         = false
+    exome                = false
+    test = false
 
-    withLabel: high_mem {
-        cpus = 8
-        memory = 62.GB
-        queue = 'hakmonkey-high_mem'
-    }
+    // Lane number
+    one                  = false
+    two                  = false
+    four                 = false
+    match                = null
 
-    withLabel: alignment {
-        cpus = 32
-        memory = 62.GB
-        queue = 'hakmonkey-alignment'
-    }
+    // Read information
+    reads1               = null
+    reads2               = null
+    reads3               = null
+    reads4               = null
 
-    withLabel: ubuntu_python3 {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/ubuntu_python3-ufl-germline:1.0.0'
-    }
 
-    withLabel: bcftools_tabix {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/bcftools_tabix-ufl-germline:1.0.0'
-    }
+    // General parameters
+    bucket               = null
+    run_id               = null
+    run_dir              = "${params.bucket}/Pipeline_Output/${params.run_id}"
+    ref_dir              = "${params.bucket}/Pipeline/Reference"
+    trim_adapters        = "${params.ref_dir}/trim/NEBNext.fa"
+    reference            = "${params.ref_dir}/hs37d5/hs37d5.fa.gz"
+    bwa_amb              = "${params.reference}.amb"
+    bwa_ann              = "${params.reference}.ann"
+    bwa_bwt              = "${params.reference}.bwt"
+    bwa_pac              = "${params.reference}.pac"
+    bwa_sa               = "${params.reference}.sa"
+    ref_fai              = "${params.reference}.fai"
+    ref_gzi              = "${params.reference}.gzi"
+    hs37d5_genes         = "${params.ref_dir}/hs37d5/hs37d5_genes.bed"
+    cnv_control          = "${params.ref_dir}/cnv/wgs_cnv_controls.RData"
+    cnv_vcf_header       = "${params.ref_dir}/cnv/cnv_vcf_header.tsv"
+    bait                 = "${params.ref_dir}/exome_targets/bait.interval_list"
+    target               = "${params.ref_dir}/exome_targets/target.interval_list"
+    variant_catalog      = "${params.ref_dir}/expansion_hunter/variant_catalog.json"
+    ehd_controls         = "${params.ref_dir}/expansion_hunter_denovo"
 
-    withLabel: bwa {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/bwa-ufl-germline:1.0.0'
-    }
 
-    withLabel: expansion_hunter {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/expansion_hunter-ufl-germline:1.0.0'
-    }
+    // Reporting parameters
+    reporting_dir        = "${params.bucket}/Pipeline/Reporting"
+    panel_dir            = "${params.ref_dir}/panels"
+    panel_reporting_list = null
 
-    withLabel: fastqc {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/fastqc-ufl-germline:1.0.0'
-    }
-
-    withLabel: cn_mops {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/panelcn.mops-ufl-germline:1.0.0'
-    }
-
-    withLabel: picard {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/picard-ufl-germline:1.0.0'
-    }
-
-    withLabel: samtools {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/samtools-ufl-germline:1.0.0'
-    }
-
-    withLabel: snpeff_tabix {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/snpeff_tabix-ufl-germline:1.0.0'
-    }
-
-    withLabel: strelka2 {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/strelka2-ufl-germline:1.0.0'
-    }
-
-    withLabel: trimmomatic {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/trimmomatic-ufl-germline:1.0.0'
-    }
-
-    withLabel: multiqc {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/multiqc-ufl-germline:1.0.0'
-    }
-
-    withLabel: manta {
-        container = '178175818611.dkr.ecr.us-east-1.amazonaws.com/manta-ufl-germline:1.0.0'
-    }
 }
 
-aws {
-    region = 'us-east-1'
+if ( params.aws ) {
+    includeConfig 'conf/aws.config'
+} else {
+    includeConfig 'conf/local.config'
+}
 
-    client {
-        maxErrorRetry = 4
+if ( params.one ) {
+    if ( params.exome ){
+        params.reads1 = "${params.bucket}/Exome_Fastqs/${params.run_id}*${params.match}"
     }
-
-    batch {
-        maxTransferAttempts = 8
-        delayBetweenAttempts = 300
-        maxParallelTransfers = 5
+    else{
+        params.reads1 = "${params.bucket}/Fastqs/${params.run_id}*${params.match}"
+    }
+}
+else if ( params.two ) {
+    if ( params.exome ){
+        params.reads1 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L001_{R1,R2}_001.fastq.gz"
+        params.reads2 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L002_{R1,R2}_001.fastq.gz"
+    }
+    else {
+        params.reads1 = "${params.bucket}/Fastqs/${params.run_id}*_L001_{R1,R2}_001.fastq.gz"
+        params.reads2 = "${params.bucket}/Fastqs/${params.run_id}*_L002_{R1,R2}_001.fastq.gz"
+    }
+}
+else if ( params.two ) {
+    if ( params.exome ){
+        params.reads1 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L001_{R1,R2}_001.fastq.gz"
+        params.reads2 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L002_{R1,R2}_001.fastq.gz"
+        params.reads3 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L003_{R1,R2}_001.fastq.gz"
+        params.reads4 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L004_{R1,R2}_001.fastq.gz"
+    }
+    else {
+        params.reads1 = "${params.bucket}/Fastqs/${params.run_id}*_L001_{R1,R2}_001.fastq.gz"
+        params.reads2 = "${params.bucket}/Fastqs/${params.run_id}*_L002_{R1,R2}_001.fastq.gz"
+        params.reads3 = "${params.bucket}/Fastqs/${params.run_id}*_L003_{R1,R2}_001.fastq.gz"
+        params.reads4 = "${params.bucket}/Fastqs/${params.run_id}*_L004_{R1,R2}_001.fastq.gz"
     }
 }
 
@@ -109,7 +117,9 @@ trace {
 }
 
 manifest {
-    author = 'Johnny Bravo'
+    name        = 'HaKmonkey/nf-wgs-ufl'
+    author      = 'Johnny Bravo'
+    homePage    = 'https://github.com/HaKmonkey/nf-wgs-ufl'
     description = 'germline pipeline and some tertiary analysis'
-    version = '1.0.0'
+    version     = '1.0.0'
 }
