--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
+**/__pycache__
+**/aws.config
 *.pyc
 .nextflow*
 timeline*
 trace*
-.DS_Store
-*/.DS_Store
 **/.DS_Store
 *.gz
 *.gz.tbi
-.DS_Store
