--- a/nextflow.config
+++ b/nextflow.config
@@ -88,7 +88,7 @@ else if ( params.two ) {
         params.reads2 = "${params.bucket}/Fastqs/${params.run_id}*_L002_{R1,R2}_001.fastq.gz"
     }
 }
-else if ( params.two ) {
+else if ( params.four ) {
     if ( params.exome ){
         params.reads1 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L001_{R1,R2}_001.fastq.gz"
         params.reads2 = "${params.bucket}/Exome_Fastqs/${params.run_id}*_L002_{R1,R2}_001.fastq.gz"
