--- a/envs/default.yaml
+++ b/envs/default.yaml
@@ -1,9 +1,10 @@
+name: default
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
 dependencies:
-  - python = 3.9
-  - numpy = 1.23.1
-  - pandas = 1.4.3
-  - pysam = 0.19.1
-  - pyarrow = 9.0.0
+  - python = 3.11
+  - numpy = 1.24.1
+  - pandas = 1.5.3
+  - pyarrow = 10.0.1
+  - pysam = 0.20.0
